# auth-mvp

./: .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607020001_create_users.py
backend/app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  routes.py  schemas.py  security.py  seed.py
backend/tests/: conftest.py  test_auth_users.py
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts
frontend/src/app/auth/: auth.guard.spec.ts  auth.guard.ts  auth.interceptor.spec.ts  auth.interceptor.ts  auth.models.ts  auth.service.spec.ts  auth.service.ts  login.component.ts  token-storage.service.ts
frontend/src/app/shared/: data-table.component.ts
frontend/src/app/users/: user-api.service.ts  user-form.component.ts  users-page.component.spec.ts  users-page.component.ts
